Fixed cropping displacement issue, version small preview updated for ai files

--- a/components/common/asset/asset-img.module.css
+++ b/components/common/asset/asset-img.module.css
@@ -12,10 +12,8 @@
 
 .react-crop{
     height: 100%;
-    width: 100%;
 }
 
 .react-crop > div{
     height: 100%;
-    width: 100%;
 }
